one spacing issue

--- a/src/components/WhoWeAre.css
+++ b/src/components/WhoWeAre.css
@@ -39,6 +39,7 @@
 .bio-content {
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
 }
 
 .bio-name {
